tests/Houtamelo.Spire.Analyzers.Tests/SPIRE026/cases/Indexer_Parameter.cs
//@ should_fail
// SPIRE026: [Inlinable] on indexer parameter

public partial class Host_026_Indexer
{
    public int this[[Inlinable] Action<int> action] //~ ERROR
    {
        get { action(0); return 0; }
    }
}
